--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Chris Munt <cmunt@mgateway.com> (http://www.gateway.com/)",
   "name": "mg-dbx",
   "description": "High speed Synchronous and Asynchronous access to M-like databases from Node.js.",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "maintainers": "Chris Munt <cmunt@mgateway.com>",
   "homepage": "https://github.com/chrisemunt/mg-dbx",
   "repository": {
@@ -18,9 +18,13 @@
     "win32"
   ],
   "keywords": [
-    "tcp",
-    "http",
-    "network"
+    "nosql",
+    "intersystems",
+    "cache",
+    "iris",
+    "yottadb",
+    "m",
+    "mumps"
   ],
   "scripts": {
     "install": "node-gyp rebuild",
